--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,34 @@ h1 {
   }
 }
 
+h2 {
+  font-size: 22px;
+}
+@media all and (min-width: 699px) {
+  h2 {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 992px) {
+  h2 {
+    font-size: 42px;
+  }
+}
+
+h3 {
+  font-size: 17px;
+}
+@media all and (min-width: 699px) {
+  h3 {
+    font-size: 22px;
+  }
+}
+@media all and (min-width: 992px) {
+  h3 {
+    font-size: 26px;
+  }
+}
+
 @font-face {
   font-family: "Segoe Print";
   src: url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.eot");
@@ -118,6 +146,10 @@ h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   margin: 30px 0 30px 0;
+}
+.header > h1 > a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .footer {
@@ -319,9 +351,14 @@ h1 {
   width: 100%;
 }
 .page--menu1 > h1 {
-  font-size: 36px;
+  font-size: 28px;
   color: #353535;
   margin: 80px 0 30px 0;
+}
+@media all and (min-width: 699px) {
+  .page--menu1 > h1 {
+    font-size: 36px;
+  }
 }
 
 .menu1 {
@@ -372,8 +409,13 @@ h1 {
   position: relative;
   cursor: pointer;
   margin: 0 20px 0 20px;
-  width: 40%;
+  width: 50%;
   text-align: center;
+}
+@media all and (min-width: 699px) {
+  .menu1--body-title > h3 {
+    width: 30%;
+  }
 }
 .menu1--body-title > h3:before {
   content: "";
@@ -389,7 +431,12 @@ h1 {
   width: 100%;
 }
 .menu1--body-title > img {
-  width: 30%;
+  width: 25%;
+}
+@media all and (min-width: 699px) {
+  .menu1--body-title > img {
+    width: 35%;
+  }
 }
 .menu1--body-content {
   display: flex;
@@ -447,6 +494,603 @@ h1 {
   width: 100%;
 }
 .menu1--footer > i {
+  margin: 0 20px 0 0;
+}
+
+.page--menu2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100%;
+  width: 100%;
+}
+.page--menu2 > h1 {
+  font-size: 28px;
+  color: #353535;
+  margin: 80px 0 30px 0;
+}
+@media all and (min-width: 699px) {
+  .page--menu2 > h1 {
+    font-size: 36px;
+  }
+}
+
+.menu2 {
+  font-family: "Frank Ruhl Libre";
+  background: #fff5fe;
+  width: 80%;
+  height: 100%;
+  padding: 60px 0 60px 0;
+  margin-bottom: 140px;
+  color: #c77412;
+}
+.menu2 i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu2 h2 {
+  font-family: "Croissant One";
+  background: -webkit-linear-gradient(0deg, #c77412 10%, #905bfd 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.menu2--header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.menu2--body {
+  width: 100%;
+  margin: 100px 0 100px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.menu2--body-title {
+  margin: 0 0 100px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title {
+    width: 80%;
+  }
+}
+.menu2--body-title > h3 {
+  position: relative;
+  cursor: pointer;
+  margin: 0 20px 0 20px;
+  width: 50%;
+  text-align: center;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title > h3 {
+    width: 30%;
+  }
+}
+.menu2--body-title > img {
+  width: 25%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title > img {
+    width: 35%;
+  }
+}
+.menu2--body-title-1 > h3 {
+  color: #c77412;
+}
+.menu2--body-title-1 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #c77412;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-1 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-title-2 > h3 {
+  color: #a56799;
+}
+.menu2--body-title-2 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #a56799;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-2 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-title-3 > h3 {
+  color: #6e4ccc;
+}
+.menu2--body-title-3 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #6e4ccc;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-3 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-content {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+.menu2--body-content > div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div {
+    flex-direction: row;
+  }
+}
+.menu2--body-content > div > p {
+  width: 100%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div > p {
+    width: 80%;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu2--body-content > div > p {
+    width: 80%;
+  }
+}
+.menu2--body-content > div > span {
+  text-align: center;
+  width: 100%;
+  font-weight: bolder;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div > span {
+    width: 20%;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu2--body-content > div > span {
+    width: 20%;
+  }
+}
+.menu2--body-content-2 {
+  color: #a56799;
+}
+.menu2--body-content-3 {
+  color: #6e4ccc;
+}
+.menu2--body-content-3 > div > p {
+  width: 100%;
+}
+.menu2--footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.menu2--footer > i {
+  margin: 0 20px 0 0;
+}
+
+.page--menu2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100%;
+  width: 100%;
+}
+.page--menu2 > h1 {
+  font-size: 28px;
+  color: #353535;
+  margin: 80px 0 30px 0;
+}
+@media all and (min-width: 699px) {
+  .page--menu2 > h1 {
+    font-size: 36px;
+  }
+}
+
+.menu2 {
+  font-family: "Frank Ruhl Libre";
+  background: #fff5fe;
+  width: 80%;
+  height: 100%;
+  padding: 60px 0 60px 0;
+  margin-bottom: 140px;
+  color: #c77412;
+}
+.menu2 i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu2 h2 {
+  font-family: "Croissant One";
+  background: -webkit-linear-gradient(0deg, #c77412 10%, #905bfd 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.menu2--header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.menu2--body {
+  width: 100%;
+  margin: 100px 0 100px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.menu2--body-title {
+  margin: 0 0 100px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title {
+    width: 80%;
+  }
+}
+.menu2--body-title > h3 {
+  position: relative;
+  cursor: pointer;
+  margin: 0 20px 0 20px;
+  width: 50%;
+  text-align: center;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title > h3 {
+    width: 30%;
+  }
+}
+.menu2--body-title > img {
+  width: 25%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title > img {
+    width: 35%;
+  }
+}
+.menu2--body-title-1 > h3 {
+  color: #c77412;
+}
+.menu2--body-title-1 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #c77412;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-1 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-title-2 > h3 {
+  color: #a56799;
+}
+.menu2--body-title-2 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #a56799;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-2 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-title-3 > h3 {
+  color: #6e4ccc;
+}
+.menu2--body-title-3 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #6e4ccc;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-3 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-content {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+.menu2--body-content > div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div {
+    flex-direction: row;
+  }
+}
+.menu2--body-content > div > p {
+  width: 100%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div > p {
+    width: 80%;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu2--body-content > div > p {
+    width: 80%;
+  }
+}
+.menu2--body-content > div > span {
+  text-align: center;
+  width: 100%;
+  font-weight: bolder;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div > span {
+    width: 20%;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu2--body-content > div > span {
+    width: 20%;
+  }
+}
+.menu2--body-content-2 {
+  color: #a56799;
+}
+.menu2--body-content-3 {
+  color: #6e4ccc;
+}
+.menu2--body-content-3 > div > p {
+  width: 100%;
+}
+.menu2--footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.menu2--footer > i {
+  margin: 0 20px 0 0;
+}
+
+.page--menu2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100%;
+  width: 100%;
+}
+.page--menu2 > h1 {
+  font-size: 28px;
+  color: #353535;
+  margin: 80px 0 30px 0;
+}
+@media all and (min-width: 699px) {
+  .page--menu2 > h1 {
+    font-size: 36px;
+  }
+}
+
+.menu2 {
+  font-family: "Frank Ruhl Libre";
+  background: #fff5fe;
+  width: 80%;
+  height: 100%;
+  padding: 60px 0 60px 0;
+  margin-bottom: 140px;
+  color: #c77412;
+}
+.menu2 i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu2 h2 {
+  font-family: "Croissant One";
+  background: -webkit-linear-gradient(0deg, #c77412 10%, #905bfd 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.menu2--header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.menu2--body {
+  width: 100%;
+  margin: 100px 0 100px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.menu2--body-title {
+  margin: 0 0 100px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title {
+    width: 80%;
+  }
+}
+.menu2--body-title > h3 {
+  position: relative;
+  cursor: pointer;
+  margin: 0 20px 0 20px;
+  width: 50%;
+  text-align: center;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title > h3 {
+    width: 30%;
+  }
+}
+.menu2--body-title > img {
+  width: 25%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-title > img {
+    width: 35%;
+  }
+}
+.menu2--body-title-1 > h3 {
+  color: #c77412;
+}
+.menu2--body-title-1 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #c77412;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-1 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-title-2 > h3 {
+  color: #a56799;
+}
+.menu2--body-title-2 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #a56799;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-2 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-title-3 > h3 {
+  color: #6e4ccc;
+}
+.menu2--body-title-3 > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #6e4ccc;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu2--body-title-3 > h3:hover:before {
+  width: 100%;
+}
+.menu2--body-content {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+.menu2--body-content > div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div {
+    flex-direction: row;
+  }
+}
+.menu2--body-content > div > p {
+  width: 100%;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div > p {
+    width: 80%;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu2--body-content > div > p {
+    width: 80%;
+  }
+}
+.menu2--body-content > div > span {
+  text-align: center;
+  width: 100%;
+  font-weight: bolder;
+}
+@media all and (min-width: 699px) {
+  .menu2--body-content > div > span {
+    width: 20%;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu2--body-content > div > span {
+    width: 20%;
+  }
+}
+.menu2--body-content-2 {
+  color: #a56799;
+}
+.menu2--body-content-3 {
+  color: #6e4ccc;
+}
+.menu2--body-content-3 > div > p {
+  width: 100%;
+}
+.menu2--footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.menu2--footer > i {
   margin: 0 20px 0 0;
 }
 
