--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,3 +12,6 @@
 @import "./layouts/menus";
 @import "./pages/index";
 @import "./pages/menu1";
+@import "./pages/menu2";
+@import "./pages/menu3";
+@import "./pages/menu4";
