--- a/assets/css/layouts/_header.scss
+++ b/assets/css/layouts/_header.scss
@@ -11,6 +11,10 @@
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
     margin: 30px 0 30px 0;
+    & > a {
+      color: inherit;
+      text-decoration: none;
+    }
   }
 
 }
