--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,30 +29,30 @@ body {
 
 html body {
   font-family: "Montserrat", sans-serif;
-  font-size: 20px;
+  font-size: 16px;
 }
 @media all and (min-width: 699px) {
   html body {
-    font-size: 26px;
+    font-size: 18px;
   }
 }
 @media all and (min-width: 992px) {
   html body {
-    font-size: 28px;
+    font-size: 24px;
   }
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 30px;
 }
 @media all and (min-width: 699px) {
   h1 {
-    font-size: 62px;
+    font-size: 52px;
   }
 }
 @media all and (min-width: 992px) {
   h1 {
-    font-size: 64px;
+    font-size: 54px;
   }
 }
 
@@ -61,12 +61,12 @@ h2 {
 }
 @media all and (min-width: 699px) {
   h2 {
-    font-size: 36px;
+    font-size: 30px;
   }
 }
 @media all and (min-width: 992px) {
   h2 {
-    font-size: 42px;
+    font-size: 38px;
   }
 }
 
@@ -1092,6 +1092,33 @@ h3 {
 }
 .menu4--footer > i {
   margin: 0 20px 0 0;
+}
+
+.mentions-legales {
+  display: flex;
+  justify-content: center;
+  color: grey;
+  margin: 50px 0 130px 0;
+}
+@media all and (min-width: 699px) {
+  .mentions-legales {
+    margin: 140px 0 220px 0;
+  }
+}
+.mentions-legales-s {
+  width: 80%;
+}
+.mentions-legales-s h1 {
+  color: #fdcb46;
+  margin-bottom: 50px;
+}
+.mentions-legales-s h2 {
+  color: black;
+  margin-bottom: 50px;
+  text-align: center;
+}
+.mentions-legales-s p {
+  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
