--- a/assets/css/pages/_menu3.scss
+++ b/assets/css/pages/_menu3.scss
@@ -23,6 +23,9 @@
   padding: 60px 0 60px 0;
   margin-bottom: 140px;
   color: black;
+  -webkit-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
+  -moz-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
+  box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
 
   & i {
   display: flex;
