--- a/assets/css/pages/_menu4.scss
+++ b/assets/css/pages/_menu4.scss
@@ -5,6 +5,9 @@
   align-items: center;
   min-height: 100%;
   width: 100%;
+  -webkit-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
+  -moz-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
+  box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
   & > h1 {
     font-size: 28px;
     @include display-md {
