--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,6 +369,9 @@ h3 {
   padding: 60px 0 60px 0;
   margin-bottom: 140px;
   color: #3c1218;
+  -webkit-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
 }
 .menu1 i {
   display: flex;
@@ -524,6 +527,9 @@ h3 {
   padding: 60px 0 60px 0;
   margin-bottom: 140px;
   color: #c77412;
+  -webkit-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
 }
 .menu2 i {
   display: flex;
@@ -723,6 +729,9 @@ h3 {
   padding: 60px 0 60px 0;
   margin-bottom: 140px;
   color: black;
+  -webkit-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
 }
 .menu3 i {
   display: flex;
@@ -902,6 +911,9 @@ h3 {
   align-items: center;
   min-height: 100%;
   width: 100%;
+  -webkit-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
 }
 .page--menu4 > h1 {
   font-size: 28px;
